Lance écran count à la creation de compte - Reponse par défaut quand rsvp event

--- a/TestParse/Main.storyboard
+++ b/TestParse/Main.storyboard
@@ -658,6 +658,33 @@
             </objects>
             <point key="canvasLocation" x="2804" y="-206"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="CBD-Bf-Uy6">
+            <objects>
+                <viewController id="hyO-uW-Ksj" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qMt-ic-w9e"/>
+                        <viewControllerLayoutGuide type="bottom" id="71r-0o-yrt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0Z0-wX-a6a">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Non mais allo quoi !" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o8Y-cg-RJt">
+                                <rect key="frame" x="84" y="289" width="152" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fbS-gf-oXC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3306" y="-1794"/>
+        </scene>
         <!--List Events-->
         <scene sceneID="hrE-aY-fXA">
             <objects>
@@ -800,6 +827,7 @@
                         <outlet property="tableEvents" destination="AyT-6Z-M3g" id="OuU-7z-MBT"/>
                         <outlet property="topImageView" destination="ns9-gE-1q4" id="D7w-aL-0fR"/>
                         <segue destination="2d6-q4-Sf3" kind="modal" identifier="Login" animates="NO" id="zHu-yQ-I5R"/>
+                        <segue destination="hyO-uW-Ksj" kind="modal" identifier="CountEvents" animates="NO" id="Wlq-vB-X1o"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ag7-f8-Nrc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3660,15 +3688,15 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="yK3-OH-GQx"/>
-        <segue reference="85D-2h-GPM"/>
-        <segue reference="pId-s9-PUV"/>
-        <segue reference="WWM-2T-ArI"/>
-        <segue reference="H4y-UD-BIY"/>
-        <segue reference="Imw-kp-jNA"/>
-        <segue reference="Biz-ZH-3yq"/>
+        <segue reference="zHu-yQ-I5R"/>
+        <segue reference="kaB-St-iPu"/>
+        <segue reference="UCP-iD-Mrv"/>
         <segue reference="ZWB-wq-JTW"/>
+        <segue reference="Biz-ZH-3yq"/>
         <segue reference="EZZ-yh-I9A"/>
+        <segue reference="yK3-OH-GQx"/>
         <segue reference="17P-5b-VHW"/>
+        <segue reference="H4y-UD-BIY"/>
+        <segue reference="pId-s9-PUV"/>
     </inferredMetricsTieBreakers>
 </document>
