--- a/TestParse/Main.storyboard
+++ b/TestParse/Main.storyboard
@@ -2657,7 +2657,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Zw0-mB-Ill"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="bOL-t0-Beh">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="51" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="qi8-zV-d8t">
@@ -2669,7 +2669,7 @@
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentCell" rowHeight="80" id="55f-6Q-Eeq" customClass="CommentCell">
-                                        <rect key="frame" x="0.0" y="86" width="320" height="80"/>
+                                        <rect key="frame" x="0.0" y="22" width="320" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="55f-6Q-Eeq" id="s5f-KL-Ace">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
@@ -2979,7 +2979,7 @@
                         <viewControllerLayoutGuide type="bottom" id="6Le-TQ-Hff"/>
                     </layoutGuides>
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="Sf5-bq-1FI">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="4oa-DN-GKx">
@@ -3197,6 +3197,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <nil key="simulatedBottomBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="imageOwner" destination="i5H-IU-zUI" id="TwF-hR-8Pr"/>
                         <outlet property="nameOwner" destination="XHE-Z3-dr6" id="2aa-Hm-jWs"/>
@@ -3213,7 +3214,7 @@
             <objects>
                 <collectionViewController autoresizesArchivedViewToFullSize="NO" id="t2e-aH-S4i" customClass="LikesCollectionsController" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="mbb-Rb-3T0">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XbV-cb-LIS">
@@ -3224,7 +3225,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="H8Z-Yd-efz">
-                                <rect key="frame" x="5" y="74" width="95" height="115"/>
+                                <rect key="frame" x="5" y="10" width="95" height="115"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="95" height="115"/>
@@ -3716,15 +3717,15 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="17P-5b-VHW"/>
-        <segue reference="yK3-OH-GQx"/>
-        <segue reference="pYD-9M-pFo"/>
         <segue reference="pId-s9-PUV"/>
+        <segue reference="ItH-HP-BNq"/>
+        <segue reference="e9E-5w-t1P"/>
         <segue reference="cCH-RC-a7a"/>
-        <segue reference="Imw-kp-jNA"/>
-        <segue reference="H4y-UD-BIY"/>
-        <segue reference="EZZ-yh-I9A"/>
-        <segue reference="Biz-ZH-3yq"/>
-        <segue reference="ZWB-wq-JTW"/>
+        <segue reference="pYD-9M-pFo"/>
+        <segue reference="yK3-OH-GQx"/>
+        <segue reference="gQS-Od-x3H"/>
+        <segue reference="zHu-yQ-I5R"/>
+        <segue reference="PEq-CK-woa"/>
+        <segue reference="eIZ-rP-uPU"/>
     </inferredMetricsTieBreakers>
 </document>
